Gutenberg: Avoid duplicate scrollbars.
See #3703.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@7578 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/gutenberg/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/gutenberg/style.css
@@ -937,6 +937,10 @@ object {
 # Frontenberg
 --------------------------------------------------------------*/
 
+.gutenberg .gutenberg__editor .components-navigate-regions {
+	height: auto;
+}
+
 @media (min-width: 782px) {
 	.folded .gutenberg__editor .edit-post-header,
 	.folded .gutenberg__editor .components-notice-list {
